meta-lead-ads-package/main/default/objects/Lead/fields/Integration_Source__c.field-meta.xml
<CustomField>
    <fullName>Integration_Source__c</fullName>
    <description>Identifies the lead integration source (e.g. Meta Lead Ads, Google Ads, WhatsApp, Website).</description>
    <label>Integration Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>