meta-lead-ads-package/main/default/objects/Lead/fields/Meta_Form_1__c.field-meta.xml
<CustomField>
    <fullName>Meta_Form_1__c</fullName>
    <label>Meta Form 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>