meta-lead-ads-package/main/default/objects/Lead/fields/Project_Interested__c.field-meta.xml
<CustomField>
    <fullName>Project_Interested__c</fullName>
    <label>Project Interested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purplstack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>